--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "guzzle/guzzle": "~3.7.0"
+        "guzzle/guzzle": "3.8.*"
     },
     "autoload": {
         "psr-0": {
