--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,27 @@
     "name": "svp/api-sdk-php",
     "description": "PHP client for the Schibsted Video Platform API",
     "homepage": "https://github.com/vgnett/svp-api-sdk-php",
+    "type": "library",
     "authors": [
         {
             "name": "Kristoffer Brabrand",
             "email": "kristoffer.brabrand@vg.no"
+        },
+        {
+            "name": "Mateusz Cyburt",
+            "email": "mateusz.cyburt@gmail.pl"
         }
     ],
     "require": {
         "php": ">=5.3.0",
         "guzzle/guzzle": "3.8.*"
     },
+    "require-dev": {
+        "phpunit/PHPUnit": "4.*"
+    },
     "autoload": {
         "psr-0": {
-            "SvpApi": "library"
+            "SvpApi\\": "library/"
         }
     }
 }
