--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,6 @@
         {
             "name": "Kristoffer Brabrand",
             "email": "kristoffer.brabrand@vg.no"
-        },
-        {
-            "name": "Mateusz Cyburt",
-            "email": "mateusz.cyburt@gmail.pl"
         }
     ],
     "require": {
@@ -18,7 +14,8 @@
         "guzzle/guzzle": "3.8.*"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "4.*"
+        "phpunit/PHPUnit": "4.*",
+        "squizlabs/php_codesniffer": "1.*"
     },
     "autoload": {
         "psr-0": {
